- renaming of Classes to follow convention that abstract classes should be named Abstract...
git-svn-id: https://efaps.googlecode.com/svn/trunk@1643 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0